# GitaWise

./: .dockerignore  .env.example  .gitignore  BACKEND_QUICK_START.md  CONFIGURATION.md  Dockerfile  PRODUCTION_OPTIMIZATION_GUIDE.md  README.md  config.py  package-lock.json  package.json  requirements.txt  vercel.json
backend/: __init__.py  main.py  pyproject.toml
backend/cache/: __init__.py  cache_keys.py  cache_manager.py  semantic_cache.py  session_cache.py  supabase_cache_schema.sql
backend/gita_vector_store/: create_chunks.py  generate_embeddings.py  upload_to_qdrant.py
backend/query_engine/: __init__.py  adaptive_engine.py  combined_analyzer.py  config.py  context_builder.py  context_resolver.py  contextual_rewriter.py  continuation_detector.py  decomposer.py  dialogue_state.py  embedding_model.py  emotion_detector.py  emotion_normalizer.py  engine.py  gemini_supervisor.py  generator.py  lightweight_router.py  models.py  prompts.py  query_builder.py  query_generator.py  reranker.py  reranker_model.py  retriever.py  router.py  startup_validation.py  state_transition_manager.py
backend/routes/: __init__.py  health.py  query_engine.py
datasets/: enriched_gita.csv
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/components/: brand.tsx  chariot-line-art.tsx  chat-input.tsx  chat-message.tsx  citation-card.tsx  disclaimer-modal.tsx  (+10 more)
notebooks/: data_cleaning.ipynb  data_preparation.ipynb
scripts/: rebuild_qdrant_index.py
(+5 files in other folders)
