[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic",
    "python-dotenv",
    "langchain",
    "langchain-core",
    "langchain-groq",
    "langchain-google-genai",
    "langchain-community",
    "qdrant-client",
    "sentence-transformers",
    "FlagEmbedding",
    "groq",
    "google-generativeai",
    "tqdm",
]
